<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.activities.InfoPageActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/email_me"
        android:layout_width="@dimen/square_button_size"
        android:layout_height="@dimen/square_button_size"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/black_rect_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:contentDescription="@string/email_me_descr" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:text="@string/email_me"
        app:layout_constraintStart_toEndOf="@+id/email_me"
        app:layout_constraintTop_toTopOf="@+id/email_me" />

    <ImageView
        android:id="@+id/view_stars"
        android:layout_width="@dimen/square_button_size"
        android:layout_height="@dimen/square_button_size"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="@+id/email_me"
        app:layout_constraintTop_toBottomOf="@+id/email_me"
        app:srcCompat="@drawable/star2"
        android:contentDescription="@string/view_the_stars_page" />

    <ImageView
        android:id="@+id/home_page"
        android:layout_width="@dimen/square_button_size"
        android:layout_height="@dimen/square_button_size"
        android:layout_marginTop="@dimen/spacing_medium"
        android:contentDescription="@string/home_page_descr"
        app:layout_constraintStart_toStartOf="@+id/view_stars"
        app:layout_constraintTop_toBottomOf="@+id/view_stars"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:text="@string/stars_page"
        app:layout_constraintStart_toEndOf="@+id/view_stars"
        app:layout_constraintTop_toTopOf="@+id/view_stars" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:text="@string/home_page"
        app:layout_constraintStart_toEndOf="@+id/home_page"
        app:layout_constraintTop_toTopOf="@+id/home_page" />

</androidx.constraintlayout.widget.ConstraintLayout>