<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.activities.TilePatternsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stars_activity_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffccddee"
        tools:context="com.activities.StarsPatternActivity">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/tiles_page_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginRight="@dimen/spacing_medium"
            android:contentDescription="@string/tiles_image_text"
            app:layout_constraintBottom_toTopOf="@+id/layout_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="#ddeeff"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_image">


            <ImageView
                android:id="@+id/tile_template"
                android:layout_width="@dimen/tile_template_height"
                android:layout_height="@dimen/tile_template_height"
                android:layout_weight="1"
                android:contentDescription="@string/tile_template"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/colour_template"
                android:layout_width="@dimen/tile_template_height"
                android:layout_height="@dimen/tile_template_height"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_weight="1"
                android:contentDescription="@string/colour_selector"
                app:layout_constraintStart_toEndOf="@+id/tile_template"
                app:layout_constraintTop_toTopOf="@+id/tile_template" />


            <EditText
                android:id="@+id/pattern_code"
                android:layout_width="@dimen/tile_code_text"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:background="@drawable/black_rect_border"
                android:inputType="textNoSuggestions"
                android:paddingRight="@dimen/spacing_medium"
                app:layout_constraintStart_toEndOf="@+id/transform_map"
                app:layout_constraintTop_toTopOf="@+id/transform_map"
                android:importantForAutofill="no"
                android:paddingEnd="@dimen/spacing_medium" />

            <ImageView
                android:id="@+id/transform_map"
                android:layout_width="@dimen/tile_template_width"
                android:layout_height="@dimen/tile_template_height"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/tile_select_transform"
                app:layout_constraintStart_toEndOf="@+id/colour_template"
                app:layout_constraintTop_toTopOf="@+id/colour_template" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:background="@android:color/white"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tile_template">

                <ImageView
                    android:id="@+id/edit_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/edit_settings"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

                <ImageView
                    android:id="@+id/random_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/draw_random"
                    app:srcCompat="@android:drawable/ic_menu_help" />

                <ImageView
                    android:id="@+id/reset_pattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/reset_pattern"
                    app:srcCompat="@android:drawable/ic_menu_revert" />

                <ImageView
                    android:id="@+id/pause_animation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/pause_animation"
                    app:srcCompat="@android:drawable/ic_media_pause" />

                <ImageView
                    android:id="@+id/resume_animation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/resume_animation"
                    app:srcCompat="@android:drawable/ic_media_play" />

                <ImageView
                    android:id="@+id/share_pattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/share_pattern"
                    app:srcCompat="@android:drawable/ic_menu_share" />

                <ImageView
                    android:id="@+id/app_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_info"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />

                <ImageView
                    android:id="@+id/back_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:contentDescription="@string/back_one"
                    app:srcCompat="@android:drawable/ic_media_previous" />

                <ImageView
                    android:id="@+id/apply_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_view" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>