<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    tools:context="com.activities.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_stars"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/text_intro"
        app:layout_constraintTop_toBottomOf="@+id/text_intro"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/label_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars_label"
        app:layout_constraintEnd_toEndOf="@+id/button_stars"
        app:layout_constraintStart_toStartOf="@+id/button_stars"
        app:layout_constraintTop_toBottomOf="@+id/button_stars" />

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="364dp"
        android:layout_height="79dp"
        android:layout_marginTop="32dp"
        android:text="@string/intro_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>